@@ -22,10 +22,10 @@ module ApplicationHelper
   end
 
   #----------------------------------------------------------------------------
-  def subtitle(id, hidden = true, text = id.to_s.capitalize)
+  def subtitle(id, hidden = true, text = id.to_s.split("_").last.capitalize)
     content_tag("div",
-      link_to_remote("<small id='#{id}_arrow'>#{ hidden ? "&#9658;" : "&#9660;" }</small> #{text}", 
-        :url => url_for(:controller => :home, :action => :toggle_form_section, :id => id), 
+      link_to_remote("<small id='#{id}_arrow'>#{ hidden ? "&#9658;" : "&#9660;" }</small> #{text}",
+        :url => url_for(:controller => :home, :action => :toggle, :id => id),
         :with => "'visible=' + Element.visible('#{id}')"
       ), :class => "subtitle")
   end
