@@ -1,9 +1,9 @@
-- collapsed = (@account.errors.empty? && session[:contact_accounts_new].nil?)
-= subtitle :contact, collapsed, "Contact Information"
+- collapsed = (@account.errors.empty? && session[:account_contact].nil?)
+= subtitle :account_contact, collapsed, "Contact Information"
 .section
-  %small#contact_intro{ hidden_if(!collapsed) }
+  %small#account_contact_intro{ hidden_if(!collapsed) }
     You can add lead contact information later.
-  #contact{ hidden_if(collapsed) }
+  #account_contact{ hidden_if(collapsed) }
     %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
