@@ -1,9 +1,9 @@
-- collapsed = (@campaign.errors.empty? && session[:permissions_campaigns_new].nil?)
-= subtitle :permissions, collapsed
+- collapsed = (@campaign.errors.empty? && session[:campaign_permissions].nil?)
+= subtitle :campaign_permissions, collapsed
 .section
-  %small#permissions_intro{ hidden_if(!collapsed) }
+  %small#campaign_permissions_intro{ hidden_if(!collapsed) }
     By default only you will have access to the campaign and its leads. You can change permissions later.
-  #permissions{ hidden_if(collapsed) }
+  #campaign_permissions{ hidden_if(collapsed) }
     .radio_box
       = radio_button_tag "campaign[access]", "Private", @campaign.access == "Private", :onclick => "$('people').hide()"
       Keep it private, do not share with others
