@@ -1,2 +1,0 @@
-%br
-= subtitle :opportunities, true
