@@ -1,9 +1,9 @@
-- collapsed = (@contact.errors.empty? && session[:extra_contacts_new].nil?)
-= subtitle :extra, collapsed, "Extra Information"
+- collapsed = (@contact.errors.empty? && session[:contact_extra].nil?)
+= subtitle :contact_extra, collapsed, "Extra Information"
 .section
-  %small#extra_intro{ hidden_if(!collapsed) }
+  %small#contact_extra_intro{ hidden_if(!collapsed) }
     You can add extra contact information later.
-  #extra{ hidden_if(collapsed) }
+  #contact_extra{ hidden_if(collapsed) }
     %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
