@@ -1,9 +1,9 @@
-- collapsed = (@contact.errors.empty? && session[:permissions_contacts_new].nil?)
-= subtitle :permissions, collapsed
+- collapsed = (@contact.errors.empty? && session[:contact_permissions].nil?)
+= subtitle :contact_permissions, collapsed
 .section
-  %small#permissions_intro{ hidden_if(!collapsed) }
+  %small#contact_permissions_intro{ hidden_if(!collapsed) }
     By default only you will have access to the contact. You can change contact permissions later.
-  #permissions{ hidden_if(collapsed) }
+  #contact_permissions{ hidden_if(collapsed) }
     .radio_box
       = f.radio_button :access, "Private", :onclick => "$('people').hide(); $('account_access').value = 'Private'"
       Keep it private, do not share with others
