@@ -1,9 +1,9 @@
-- collapsed = (@contact.errors.empty? && session[:presence_contacts_new].nil?)
-= subtitle :presence, collapsed, "Web Presence"
+- collapsed = (@contact.errors.empty? && session[:contact_presence].nil?)
+= subtitle :contact_presence, collapsed, "Web Presence"
 .section
-  %small#presence_intro{ hidden_if(!collapsed) }
+  %small#contact_presence_intro{ hidden_if(!collapsed) }
     You can add web presence information later.
-  #presence{ hidden_if(collapsed) }
+  #contact_presence{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
