@@ -1,10 +1,9 @@
-- logger.p session[:contact_leads_new].inspect
-- collapsed = (@lead.errors.empty? && session[:contact_leads_new].nil?)
-= subtitle :contact, collapsed, "Contact Information"
+- collapsed = (@lead.errors.empty? && session[:lead_contact].nil?)
+= subtitle :lead_contact, collapsed, "Contact Information"
 .section
-  %small#contact_intro{ hidden_if(!collapsed) }
+  %small#lead_contact_intro{ hidden_if(!collapsed) }
     You can add lead contact information later.
-  #contact{ hidden_if(collapsed) }
+  #lead_contact{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
