@@ -1,9 +1,9 @@
-- collapsed = (@lead.errors.empty? && session[:permissions_leads_convert].nil?)
-= subtitle :permissions, collapsed
+- collapsed = (@lead.errors.empty? && session[:lead_convert_permissions].nil?)
+= subtitle :lead_convert_permissions, collapsed
 .section
-  %small#permissions_intro{ hidden_if(!collapsed) }
+  %small#lead_convert_permissions_intro{ hidden_if(!collapsed) }
     Contact permissions will be copied from the lead being converted. You can change contact permissions later.
-  #permissions{ hidden_if(collapsed) }
+  #lead_convert_permissions{ hidden_if(collapsed) }
     .radio_box
       = radio_button_tag "access", "Lead",    true,  :onclick => "$('people').hide(); $('account_access').value = 'Lead'"
       Copy lead permissions
