@@ -12,12 +12,12 @@
       }
     }
 
-- collapsed = (@lead.errors.empty? && session[:status_leads_new].nil?)
-= subtitle :status, collapsed, "Lead Status"
+- collapsed = (@lead.errors.empty? && session[:lead_status].nil?)
+= subtitle :lead_status, collapsed
 .section
-  %small#status_intro{ hidden_if(!collapsed) }
+  %small#lead_status_intro{ hidden_if(!collapsed) }
     You can add lead status information later.
-  #status{ hidden_if(collapsed) }
+  #lead_status{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
