@@ -1,9 +1,9 @@
-- collapsed = (@lead.errors.empty? && session[:presence_leads_new].nil?)
-= subtitle :presence, collapsed, "Web Presence"
+- collapsed = (@lead.errors.empty? && session[:lead_presence].nil?)
+= subtitle :lead_presence, collapsed, "Web Presence"
 .section
-  %small#presence_intro{ hidden_if(!collapsed) }
+  %small#lead_presence_intro{ hidden_if(!collapsed) }
     You can add web presence information later.
-  #presence{ hidden_if(collapsed) }
+  #lead_presence{ hidden_if(collapsed) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
